--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,7 +1,8 @@
 name: "parse and deploy"
 on:
-  schedule:
-    - cron:  '05 4 * * *'
+  workflow_dispatch:
+  #schedule:
+  #  - cron:  '05 4 * * *'
   push:
 
 jobs:
